--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body, html {
 }
 
 .cover-image1 {
-    background-image: url('images/cover.jpg');
+    background-image: url('images/cover.webp');
     background-size: cover;
     background-position: center;
     height: 70vh; /* Full viewport height */
@@ -21,7 +21,7 @@ body, html {
 }
 
 .cover-image2 {
-    background-image: url('images/c61.jpg');
+    background-image: url('images/c61.webp');
     background-size: cover;
     background-position: center;
     height: 130vh; /* Full viewport height */
@@ -57,7 +57,7 @@ img {
 }
 
 .cover-image3 {
-    background-image: url('images/c3.jpg');
+    background-image: url('images/c3.webp');
     background-size: cover;
     background-position: center;
     height: 70vh; /* Full viewport height */
@@ -69,7 +69,7 @@ img {
 }
 
 .cover-image4 {
-    background-image: url('images/c4.jpg');
+    background-image: url('images/c4.webp');
     background-size: cover;
     background-position: center;
     height: 130vh; /* Full viewport height */
@@ -81,7 +81,7 @@ img {
 }
 
 .cover-image5 {
-    background-image: url('images/c5.jpg');
+    background-image: url('images/c5.webp');
     background-size: cover;
     background-position: center;
     height: 130vh; /* Full viewport height */
@@ -93,7 +93,7 @@ img {
 }
 
 .cover-image6 {
-    background-image: url('images/c6.jpg');
+    background-image: url('images/c6.webp');
     background-size: cover;
     background-position: center;
     height: 80h; /* Full viewport height */
