--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ body, html {
     align-items: center;
     color: black;
     text-align: center;
+	font: cinzel;
+	
 }
 
 .cover-image2 {
@@ -91,6 +93,11 @@ img {
     color: greenyellow;
     text-align: center;
 }
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Cinzel', serif;
+}
+
+
 
 .cover-image6 {
     background-image: url('images/c6.webp');
@@ -108,6 +115,8 @@ header {
     color: #fff;
     padding: 10px 0;
     text-align: center;
+	font: cinzel;
+	
 }
 nav ul {
     list-style: none;
@@ -120,6 +129,7 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
+	Font: Cinzel;
 }
 main {
     padding: 20px;
@@ -128,6 +138,7 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: center;
+	Font: cinzel
     padding: 10px 0;
     position: fixed;
     width: 100%;
@@ -145,7 +156,7 @@ footer {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: cinzel, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -170,6 +181,7 @@ header {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
+	Font: cinzel
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -182,6 +194,7 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: center;
+	font: cinzel;
     padding: 10px 0;
     position: fixed;
     width: 100%;
@@ -214,6 +227,7 @@ header {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
+	Font: cinzel;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
