Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .cover-image6 {
-    background-image: url('images/c6.webp');
+    background-image: url('images/Prince_c6.webp');
     background-size: cover;
     background-position: center;
     height: 80h; /* Full viewport height */
