--- a/styles.css
+++ b/styles.css
@@ -103,11 +103,11 @@ h1, h2, h3, h4, h5, h6 {
     background-image: url('images/Prince_c6.webp');
     background-size: cover;
     background-position: center;
-    height: 80h; /* Full viewport height */
+    height: 75h; /* Full viewport height */
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    color: blue;
     text-align: center;
 }
 header {
